--- a/inicio.html
+++ b/inicio.html
@@ -92,7 +92,19 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
+                  En stock 3 unidades
+                </a>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <img class="producto" src="img/saco.jpg" alt="">
+                <br>
+                DISPONIBLE <br>
+                $8.000 <br>
+                <!--Link para ir a ficha.html-->
+                <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
+                  Descripción: <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -116,7 +128,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -128,7 +140,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -140,7 +152,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -152,7 +164,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -164,7 +176,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -176,7 +188,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -188,7 +200,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -200,19 +212,7 @@
                 <!--Link para ir a ficha.html-->
                 <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
                   Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
-                  En stock 3 unidades
-                </a>
-              </div>
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/saco.jpg" alt="">
-                <br>
-                DISPONIBLE <br>
-                $8.000 <br>
-                <!--Link para ir a ficha.html-->
-                <a class="nav-link" href="ficha.html">Saco de alimento Royan Canin
-                  Descripción: <br>
-                  Royan Canin, 3kg, savor a pavo, adulto <br>
+                  Royan Canin, 3kg, sabor a pavo, adulto <br>
                   En stock 3 unidades
                 </a>
               </div>
@@ -224,7 +224,7 @@
                 $8.000 <br>
                 Saco de alimento Royan Canin <br>
                 Descripción: <br>
-                Royan Canin, 3kg, savor a pavo, adulto <br>
+                Royan Canin, 3kg, sabor a pavo, adulto <br>
                 En stock 3 unidades
               </div>
             </div>
