--- a/ingreso.html
+++ b/ingreso.html
@@ -54,22 +54,20 @@
         <!--INGRESO-->
     <div class = "login">
         <h1 class="text-center">Ingresar a la tienda</h1>
-        <form class="needs-validation was-validated">
+        <form class="needs-validation was-validated" id="formulario_ing">
             <div class="form-group">
                 <label class="form-label" for="email">Correo: </label>
-                <input class="form-control" type="email" id="email" required>
-                <div class="invalid-feedback">Por favor ingrese su correo.</div>
+                <input class="form-control" type="email" id="email">
             </div>
             <div class="form-group was-validated">
-                <label class="form-label" for="password">Contraseña:</label>
-                <input class="form-control" type="password" id="password" required>
-                <div class="invalid-feedback">Por favor ingrese su contraseña.</div>
+                <label class="form-label" for="contraseña">Contraseña:</label>
+                <input class="form-control" type="password" id="contraseña">
             </div>
             <div class="form-group form-check">
-                <input class="form-check-input" type="checkbox" id="check">
-                <label  class="form-check-label"for="check">Recuerdame</label>
+                <input class="form-check-input" type="checkbox" id="confirmar">
+                <label  class="form-check-label"for="confirmar">Recuerdame</label>
             </div>
-            <input class="btn btn-success w-100" type="submit" value="INGRESAR">
+            <input class="btn btn-success w-100" type="submit" value="INGRESAR" id="boton">
         </form>
         <div class="opciones">
           <a href="registro.html">Registrarme</a>
@@ -95,5 +93,6 @@
     </div>
 </div>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+<script src="js/val_ingreso.js"></script>
 </html>
