--- a/mant_prod.html
+++ b/mant_prod.html
@@ -81,18 +81,18 @@
                     </div>
                     <!--Descuentos-->
                     <div class="mb-3">
-                        <label for="Descuentos" class="form-label">Descuento suscriptor:</label>
-                        <input type="text" class="form-control" id="Descuento" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
+                        <label for="DescuentoSus" class="form-label">Descuento suscriptor:</label>
+                        <input type="text" class="form-control" id="DescuentoSus" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
                     </div>
                     <!--Descuento por oferta-->
                     <div class="mb-3">
-                        <label for="DescuentosOf" class="form-label">Descuento en oferta:</label>
-                        <input type="text" class="form-control" id="Descuento" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
+                        <label for="DescuentoOf" class="form-label">Descuento en oferta:</label>
+                        <input type="text" class="form-control" id="DescuentoOf" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
                     </div>
                     <!--Botones-->
-                    <button type="submit" class="btn btn-primary">Nuevo</button>
-                    <button type="submit" class="btn btn-success">Guardar</button>
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                    <button type="button" class="btn btn-primary" id="btnNuevo">Nuevo</button>
+                    <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+                    <button type="button" class="btn btn-danger" id="btnEliminar">Eliminar</button>
                 </form>
             </div>
             <!--Segunda columna de la primera fila-->
@@ -173,4 +173,8 @@
 
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+<script src="js/val_mant_prod.js"></script>
+<script src="js/botones.js"></script>
 </html>
