--- a/ropita.html
+++ b/ropita.html
@@ -52,127 +52,9 @@
 
           <!-- productos -->
           <div class="container-fluid">
-            <div class="row">              
-              <!--Producto sin link usado como base-->
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <img class="producto" src="img/pantalon.webp" alt="">
-                <br>
-                $8.000 <br>
-                Pantalon de genero<br>
-                Descripción: <br>
-                Color azul<br>
-                En stock 3 unidades
-              </div>
+            <!-- aqui se deja vacio porque la api se escribe en js-->
+            <div id="apis-ropita" class="row">              
+              
             </div>
           </div>
         </div>
@@ -191,5 +73,7 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
