se suben los JS con JQuery's
faltan archivos aun

--- a/registro.html
+++ b/registro.html
@@ -49,57 +49,67 @@
       <form action="">
         <div class="container-fluid">
           <div class="row">
-            <div class="col" id="datos">
-              
+            <div class="col-md-6">
               <div class="mb-3">
-                <label for="rut">RUT</label>
-                <input type="text" class="form-control" id="rut" aria-describedby="rutHelp" placeholder="ej;10123123-k">
-                <small id="rutHelp" class="form-text text-muted">Escriba el rut sin puntos y con guion</small>
+                <label for="rut" class="form-label">RUT</label>
+                <input type="text" class="form-control" id="rut" aria-describedby="rutHelp" placeholder="Ejemplo: 10123123-K">
+                <small id="rutHelp" class="form-text text-muted">Escriba el RUT sin puntos y con guión.</small>
               </div>
               <div class="mb-3">
-                <label for="nombre">NOMBRES</label>
-                <input type="text" class="form-control" id="nombres" placeholder="ingre tus nombres">
+                <label for="nombres" class="form-label">NOMBRES</label>
+                <input type="text" class="form-control" id="nombres" placeholder="Ingrese sus nombres">
               </div>
               <div class="mb-3">
-                <label for="apellidos">Apellidos</label>
-                <input type="text" class="form-control" id="apellidos" placeholder="Ingresa tus apellidos">
+                <label for="apellidos" class="form-label">APELLIDOS</label>
+                <input type="text" class="form-control" id="apellidos" placeholder="Ingrese sus apellidos">
               </div>
               <div class="mb-3">
-                <label for="correo">Correo</label>
-                <input type="email" class="form-control" id="correo" placeholder="Ingresa tu correo">
+                <label for="correo" class="form-label">CORREO ELECTRÓNICO</label>
+                <input type="email" class="form-control" id="correo" placeholder="Ingrese su correo electrónico">
               </div>
               <div class="mb-3">
-                <label for="direccion">Direccion</label>
-                <textarea class="form-control" id="direccion" rows="3" placeholder="Direccion"></textarea>
+                <label for="direccion" class="form-label">DIRECCIÓN</label>
+                <textarea class="form-control" id="direccion" rows="3" placeholder="Ingrese su dirección"></textarea>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Deseo inscribirme con un aporte </label>
+                <input type="checkbox" class="form-check-input" id="aporte">
+                <label class="form-check-label" for="aporte">Deseo inscribirme con un aporte.</label>
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="Contraseña1" placeholder="Password">
+                <label for="password" class="form-label">CONTRASEÑA</label>
+                <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="Contraseña2" placeholder="Vuelva ingresar la Password">
+                <label for="confirm-password" class="form-label">CONFIRMAR CONTRASEÑA</label>
+                <input type="password" class="form-control" id="confirm-password" placeholder="Ingrese su contraseña nuevamente">
               </div>
             </div>
-            <div class="col" id="foto">
-              foto del cliente
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center">
-              <button type="submit" class="btn btn-primary ancho-boton">Guardar</button>
-              <button type="reset" class="btn btn-primary ancho-boton">Limpiar</button>
-              <div class="form-group">
-                <label for="exampleFormControlFile1">Ingrese su foto o imagen</label>
-                <input type="file" class="form-control-file" id="exampleFormControlFile1">
+            <div class="col-md-6">
+              <div class="text-center">
+                <label for="foto" class="form-label">FOTO DE PERFIL</label>
+              </div>
+              <div class="row mt-3">
+                <div class="col text-center">
+                  <div class="d-flex justify-content-center align-items-center" id="foto">
+                    <img src="https://via.placeholder.com/150" alt="Foto de perfil" class="rounded-circle">
+                  </div>
+                </div>
+              <div class="row">
+                <div class="col text-center">
+                  <button type="submit" class="btn btn-primary ancho-boton">Guardar</button>
+                  <button type="reset" class="btn btn-primary ancho-boton">Limpiar</button>
+                </div>
+              </div>
+              <div class="row mt-3">
+                <div class="col text-center">
+                  <div class="form-group">
+                    <label for="exampleFormControlFile1">Ingrese su foto o imagen</label>
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                  </div>
+                </div>
+              </div>
               </div>
             </div>
-          </div>
-        </div>
       </form>
       <!-- pie de pagina -->
     <br><br>
@@ -113,5 +123,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+  <script src="js/val_registro.js"></script>
   </body>
 </html>
